# http-dns-server

./: Cargo.toml  LICENSE  README.md
src/: main.rs
