[package]
name = "async-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
domain = { version = "0.8.0", features = ["bytes"] }
hyper = { version = "0.14.27", features = ["server", "http1", "tcp"] }
once_cell = "1.18.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net", "bytes", "sync"] }
